k8s/Deployment.yaml
# Prestashop deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prestashop
  namespace: prestashop
  labels:
    app: prestashop
spec:
  selector:
    matchLabels:
      app: prestashop
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: prestashop
    spec:
      containers:
        - image: prestashop/prestashop:9.1.1-apache
          name: prestashop
          ports:
            - containerPort: 80
