k8s/Services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prestashop-svc
  namespace: prestashop
spec:
  selector:
    app: prestashop
  type: NodePort
  ports:
    - port: 80
      nodePort: 30333

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc 
  namespace: prestashop
spec:
  selector:
    name: mysql
  type: ClusterIP
  ports:
    - port: 3306
